...
                                                    <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="13"/>
                                                    <color key="textColor" name="YPWhite"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ThP-0n-1fB">
                                                    <rect key="frame" x="312" y="11" width="66" height="56"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button"/>
                                                    <state key="normal" title="Button"/>
                                                    <buttonConfiguration key="configuration" style="plain" image="Active" title=""/>
                                                    <connections>
                                                        <action selector="likeButtonClicked" destination="7q7-HV-9Xc" eventType="touchUpInside" id="AUP-PV-mzU"/>
                                                    </connections>
                                                </button>
...
                                <connections>
                                    <outlet property="delegate" destination="SIL-oK-pMO" id="jtW-8g-Jum"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tnK-It-JjD" userLabel="BackButton">
                                <rect key="frame" x="8" y="55" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="HZW-ER-Yc9"/>
                                    <constraint firstAttribute="width" constant="48" id="iUc-Z4-JTv"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="chevron_backward"/>
...
                                    <constraint firstAttribute="height" constant="60" id="wAQ-df-4GS"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WHh-zT-Bb1">
                                <rect key="frame" x="16" y="672" width="358" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="grJ-k0-stD"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Button">
                                    <attributedString key="attributedTitle">
...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="UnsplashWebView"/>
                                </userDefinedRuntimeAttributes>
                            </wkWebView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I3A-hI-QOs">
                                <rect key="frame" x="0.0" y="47" width="64" height="44"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="64" id="qdh-KN-Ryv"/>
...
