//
//  StringConstantsRU.swift
//  ImageFeed
//
//  Created by Артем Кохан on 08.02.2023.
//

import Foundation

let alertTitle = "Пока, пока!"
let alertMessage = "Уверены что хотите выйти?"
