...
        descriptionLabel.topAnchor.constraint(equalTo: loginLabel.bottomAnchor, constant: 8).isActive = true
        descriptionLabel.leadingAnchor.constraint(equalTo: nameLabel.leadingAnchor).isActive = true
    }
    
    func addButtonView() {
        var button = UIButton.systemButton(with: UIImage(named: "Exitpic") ?? UIImage(), target: self, action: #selector(self.didTapLogoutButton))
        button.accessibilityIdentifier = "logout button"
        button.tintColor = .red
        button.translatesAutoresizingMaskIntoConstraints = false
        self.button = button
        
        view.addSubview(button)
        
...
